2019-1/221/users/4120/executions/1766_1583.log
== SUBMITION (2019-05-30 00:51:40) 
-- CODE:
from numpy import *

n = input("Digite uma sequencia de no minimo 3 numeros: ")

print([0:4],".",[4:7],".",[7:n-1])
-- EXECUTION TIME:
0.139446
-- ERROR:
  File "/home/codebench/codes/1766/1583/main.py", line 5
    print([0:4],".",[4:7],".",[7:n-1])
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:51:41) 
-- CODE:
from numpy import *

n = input("Digite uma sequencia de no minimo 3 numeros: ")

print([0:4],".",[4:7],".",[7:n-1])
-- ERROR:
File "XXXX", line 5
    print([0:4],".",[4:7],".",[7:n-1])
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:51:51) 
-- CODE:
from numpy import *

n = input("Digite uma sequencia de no minimo 3 numeros: ")

print([0:4],".",[4:7],".",[7:9])
-- EXECUTION TIME:
0.138524
-- ERROR:
  File "/home/codebench/codes/1766/1583/main.py", line 5
    print([0:4],".",[4:7],".",[7:9])
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:51:54) 
-- CODE:
from numpy import *

n = input("Digite uma sequencia de no minimo 3 numeros: ")

print([0:4],".",[4:7],".",[7:9])
-- ERROR:
File "XXXX", line 5
    print([0:4],".",[4:7],".",[7:9])
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 01:00:13) 
-- CODE:
from numpy import *

n = input("Digite uma sequencia de no minimo 3 numeros: ")

i = 0

N = ""
while( i < len(n)):
	N = N + n[i: i +3] + "."
	i = i + 3
print(N[:-1])
-- EXECUTION TIME:
0.498098
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 01:11:41) 
-- CODE:
from numpy import *

n = input("Digite uma sequencia de no minimo 3 numeros: ")

i = 0

N = ""
while( i < len(n)):
	N = N + n[i: i +3] + "."
	i = i + 3
print(N[:-1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
